--- a/app/src/main/res/layout/activity_exercise_details.xml
+++ b/app/src/main/res/layout/activity_exercise_details.xml
@@ -11,21 +11,132 @@
     tools:context="com.example.martinsaad.hackidc.ExerciseDetailsActivity"
     android:weightSum="1">
 
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="1">
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="43dp"
+        android:layout_height="39dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Exercise Name"
         android:id="@+id/textView"
-        android:layout_weight="0.03" />
+        android:layout_marginTop="30dp"
+        android:layout_weight="1.04" />
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        >
 
-    <WebView
-        android:layout_width="353dp"
-        android:layout_height="138dp"
-        android:id="@+id/webView"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="0.18"
-        android:layout_marginTop="50dp" />
+        <ImageButton
+            android:id="@+id/button_excerise_details"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
+            android:background="@drawable/exerciseDetails"
+            android:gravity="center"/>
+    </FrameLayout>
+    </LinearLayout>
+
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
+        tools:context="com.example.martinsaad.hackidc.ExerciseDetailsActivity"
+        android:weightSum="1">
+
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="1">
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                >
+
+                <ImageButton
+                    android:id="@+id/timer"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/timer"
+                    android:gravity="center"/>
+            </FrameLayout>
+
+
+            <LinearLayout android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1">
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                >
+
+
+                <ImageButton
+                    android:id="@+id/lastWeight"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/lastWeight"
+                    android:gravity="center"/>
+            </FrameLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Set1"
+                android:id="@+id/Set1"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Set2"
+                    android:id="@+id/Set2"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="20dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Set3"
+                    android:id="@+id/Set3"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="20dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Set4"
+                    android:id="@+id/Set4"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="20dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Set5"
+                    android:id="@+id/Set5"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="20dp" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+
 
     <EditText
         android:layout_width="match_parent"
@@ -35,15 +146,23 @@
         android:id="@+id/editText"
         android:layout_weight="0.08" />
 
-    <ImageButton
-        android:layout_width="122dp"
-        android:layout_height="99dp"
-        android:id="@+id/imageButton"
-        android:src="@drawable/adi"
-        android:adjustViewBounds="true"
-        android:scaleType="centerInside"
-        />
 
 
 
+        <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        >
+
+        <ImageButton
+            android:id="@+id/button_swap_excerise"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:background="@drawable/swap_exercise"
+            android:gravity="center"/>
+    </FrameLayout>
+
+</LinearLayout>
 </LinearLayout>
