--- a/app/src/main/res/layout/fragment_exercise_details.xml
+++ b/app/src/main/res/layout/fragment_exercise_details.xml
@@ -141,47 +141,52 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="1"
                     android:id="@+id/newSet1"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
-                    android:layout_weight="0.2" />
+                    android:layout_weight="0.2"
+                    android:hint="1"
+                    android:gravity="center" />
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="2"
                     android:id="@+id/newSet2"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="10dp"
-                    android:layout_weight="0.2" />
+                    android:layout_weight="0.2"
+                    android:hint="2"
+                    android:gravity="center" />
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="3"
                     android:id="@+id/newSet3"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="10dp"
-                    android:layout_weight="0.2" />
+                    android:layout_weight="0.2"
+                    android:hint="3"
+                    android:gravity="center" />
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="4"
                     android:id="@+id/newSet4"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="10dp"
-                    android:layout_weight="0.2" />
+                    android:layout_weight="0.2"
+                    android:hint="4"
+                    android:gravity="center" />
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="5"
                     android:id="@+id/newSet5"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="10dp"
-                    android:layout_weight="0.2" />
+                    android:layout_weight="0.2"
+                    android:hint="5"
+                    android:gravity="center" />
             </LinearLayout>
 
             <LinearLayout android:layout_width="match_parent"
