--- a/app/src/main/res/layout/fragment_exercise_details.xml
+++ b/app/src/main/res/layout/fragment_exercise_details.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="deprecated.ExerciseDetailsActivity"
+    tools:context="com.example.martinsaad.hackidc.ExerciseDetailsFragment"
     android:weightSum="1">
 
     <LinearLayout android:layout_width="match_parent"
@@ -19,7 +19,7 @@
             android:layout_height="39dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Exercise Name"
-            android:id="@+id/textView"
+            android:id="@+id/ExerciseName"
             android:layout_marginTop="30dp"
             android:layout_weight="1.04" />
         <FrameLayout
@@ -229,7 +229,7 @@
             android:layout_marginTop="40dp">
 
             <ImageButton
-                android:id="@+id/button_swap_excerise"
+                android:id="@+id/button_swap_exercise"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/swap_exercise"
