--- a/app/src/main/res/layout/fragment_exercise_list.xml
+++ b/app/src/main/res/layout/fragment_exercise_list.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/lvToDoList"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></ListView>
 
@@ -17,7 +17,7 @@
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
         android:src="@drawable/components_buttons_usage1"
-        app:layout_anchor="@id/lvToDoList"
+        app:layout_anchor="@android:id/list"
         app:layout_anchorGravity="bottom|right|end" />
 
 </android.support.design.widget.CoordinatorLayout>
