--- a/app/src/main/res/layout/fragment_exercise_details.xml
+++ b/app/src/main/res/layout/fragment_exercise_details.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="deprecated.ExerciseDetailsActivity"
+    tools:context="com.example.martinsaad.hackidc.ExerciseDetailsFragment"
     android:weightSum="1">
 
     <LinearLayout android:layout_width="match_parent"
