--- a/app/src/main/res/layout/fragment_exercise_details.xml
+++ b/app/src/main/res/layout/fragment_exercise_details.xml
@@ -145,8 +145,8 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="0.2"
-                    android:hint="1"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:text="0" />
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -155,8 +155,8 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="0.2"
-                    android:hint="2"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:text="0" />
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -165,8 +165,8 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="0.2"
-                    android:hint="3"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:text="0" />
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -175,8 +175,8 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="0.2"
-                    android:hint="4"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:text="0" />
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -185,8 +185,8 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="10dp"
                     android:layout_weight="0.2"
-                    android:hint="5"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:text="0" />
             </LinearLayout>
 
             <LinearLayout android:layout_width="match_parent"
