--- a/app/src/main/res/layout/fragment_exercise_list.xml
+++ b/app/src/main/res/layout/fragment_exercise_list.xml
@@ -15,8 +15,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_margin="16dp"
-        android:src="@drawable/components_buttons_usage1"
+        android:layout_margin="18dp"
+        android:src="@drawable/start"
         app:layout_anchor="@android:id/list"
         app:layout_anchorGravity="bottom|right|end" />
 
