--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.reabar.gimmy.MainActivity">
+    tools:context="com.example.martinsaad.hackidc.LoginFragment">
 
     <EditText
         android:layout_width="match_parent"
