--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -62,21 +62,11 @@
             android:layout_height="wrap_content"
             android:inputType="numberSigned"
             android:ems="10"
-            android:hint="Rest Between Sets"
-            android:id="@+id/editText_Settings_restTimeSets"
-            android:layout_weight="1"
-            android:layout_marginTop="30dp" />
-
-
-        <EditText
-            android:layout_width="106dp"
-            android:layout_height="wrap_content"
-            android:inputType="numberSigned"
-            android:ems="10"
             android:hint="Rest Between Exercises"
             android:id="@+id/editText_Settings_restTimeExercise"
             android:layout_weight="1"
-            android:layout_marginTop="30dp" />
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="30dp" />
 
         <EditText
             android:layout_width="106dp"
@@ -86,7 +76,8 @@
             android:hint="My Weight"
             android:id="@+id/editText_Settings_weight"
             android:layout_weight="1"
-            android:layout_marginTop="30dp" />
+            android:layout_marginTop="30dp"
+            android:gravity="center" />
     </LinearLayout>
 
     <Button
