--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/enter"
     tools:context="com.example.martinsaad.hackidc.LoginFragment">
 
     <EditText
@@ -29,19 +30,20 @@
         android:layout_marginTop="10dp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
+        android:layout_width="155dp"
+        android:layout_height="99dp"
+        android:text=""
         android:id="@+id/button_Login"
+        android:background="@drawable/login"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="100dp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register"
+        android:layout_width="116dp"
+        android:layout_height="44dp"
+        android:text=""
         android:id="@+id/button_registerLogin"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="150dp" />
+        android:background="@drawable/signup"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
